# Docker-DevOps-Tooling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Docker/: Simple_Docker_Menu.sh  nginx_exec.sh  pull_images.sh  remove_Container.sh  remove_images.sh
Docker/lab1/: Create_Web_Server.sh  Docker_Simple_Menu.sh  Dockerui_install.sh
Docker/lab2/: Docker_Menu.sh  Dockerfile  counter.sh
cli/: .coverage  .dockerignore  Dockerfile  pyproject.toml
cli/dockerctl/: __init__.py  __main__.py  containers.py  images.py
cli/tests/: test_containers.py  test_docker.py  test_images.py  test_version.py
compose/: .env.example  docker-compose.yml
compose/grafana/dashboards/: containers.json
compose/grafana/provisioning/dashboards/: dashboards.yml
compose/grafana/provisioning/datasources/: prometheus.yml
compose/nginx/: status.conf
compose/prometheus/: prometheus.yml
docs/assets/: demo.tape
docs/design/: production-upgrade-design.md
docs/superpowers/specs/: 2026-07-02-production-upgrade-design.md
drafts/: devto-hardening-article.md  linkedin-and-cv.md
images/counter/: Dockerfile  counter.sh
