[project]
name = "dockerctl"
version = "0.1.0"
description = "Non-interactive Docker helper CLI for CI/CD pipelines."
requires-python = ">=3.10"
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
dockerctl = "dockerctl.__main__:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dockerctl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
