[project]
name = "dockerctl"
version = "0.2.0"
description = "Non-interactive Docker helper CLI for CI/CD pipelines."
requires-python = ">=3.10"
dependencies = ["typer>=0.26.8"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=6"]
dev = ["dockerctl[test]", "mypy>=1.14", "ruff>=0.8"]

[project.scripts]
dockerctl = "dockerctl.__main__:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dockerctl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
# Test helpers like fake_run(*args, **kwargs) stay terse.
disallow_untyped_defs = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dockerctl --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    # The installed-package tests can never hit the source-tree fallback.
    "except PackageNotFoundError:",
]
